:bug: Fix logo strokes z-index

--- a/src/components/ContactSection/ContactSection.css
+++ b/src/components/ContactSection/ContactSection.css
@@ -77,7 +77,6 @@
 
 .contact__form {
     width: 100%;
-    z-index: 1;
 }
 
 .contact__form form {
