--- a/src/components/HeroSection/HeroSection.css
+++ b/src/components/HeroSection/HeroSection.css
@@ -1,7 +1,9 @@
 .hero__container {
+    position: relative;
     width: 100vw;
     height: 100vh;
     background: url("../../assets/images/hero-background.jpg") center center / cover no-repeat;
+    z-index: -10;
 }
 
 .hero {
